@@ -20,6 +20,7 @@ Trunk
 		* Updated listctrl.cpp from wxWidgets cvs.
 		* Changed CECSocket constructor to be exception safe.
 		* Create a backup of the log file upon init.
+		* Fix for invalid rectangle size on COScopeCtrl::PlotHistory().
 
 --------------------------------------------------------------------------------
 
